K8s-yaml/2048-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 2048-game-deployment
  namespace: 2048-game
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 2048-game
  template:
    metadata:
      labels:
        app: 2048-game
    spec:
      containers:
      - name: 2048-game
        image: amandeol063/2048-game:latest
        ports:
        - containerPort: 80
