K8s-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: 2048-game-service
  namespace: 2048-game
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: 2048-game
